# danke

./: README.md  aisuite.py  langch.py  pyproject.toml
res/: thebodyshop.txt
src/: main.py  slop.py
